# tutorial

./: .gitignore  CMakeLists.txt  azure-pipelines.yml
lib/: CMakeLists.txt
lib/include/: hello.h
lib/src/: hello.cpp
src/: main.cpp
tests/: CMakeLists.txt
tests/src/: test_hello.cpp
